# saffier

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yaml  compose.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  revamp_plan.md
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
.github/workflows/: publish.yml  test-suite.yml
_.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
docs/: connection.md  contributing.md  declarative-models.md  engines.md  exceptions.md  extensions.md  extras.md  fields.md  files.md  index.md  inspectdb.md  managers.md  marshalls.md  migrations.md  models.md  pagination.md  queries.md  reference-foreignkey.md  reflection.md  registry.md  relationships.md  release-notes.md  saffier.md  settings.md  shell.md  signals.md  sponsorship.md  test-client.md  tips-and-tricks.md  transactions.md
docs/admin/: admin.md
docs/cli/: commands.md
docs/contenttypes/: intro.md
docs/migrations/: discovery.md  migrations.md
docs/overrides/: home.html
docs/permissions/: intro.md
docs/queries/: many-to-many.md  prefetch.md  q.md  queries.md  related-name.md  secrets.md  sqlalchemy-compatibility.md
docs/references/: database.md  engines.md  fields.md  foreignkey.md  index.md  manager.md  many-to-many.md  marshalls.md  models.md  one-to-one.md  queryset.md  reflect-model.md  registry.md  schemas.md  signals.md  strict-model.md
docs/reflection/: autoreflection.md
docs/tenancy/: contrib.md  saffier.md
docs_src/commands/: discover.py
docs_src/connections/: simple.py
docs_src/engines/: custom.py  msgspec.py  per_model.py  registry_default.py
docs_src/extras/: app.py
docs_src/migrations/: accounts_migrate.py  accounts_models.py  fastapi.py  migrations.py  model.py  starlette.py  via_dict.py  via_list.py  via_tuple.py
docs_src/quickstart/: example1.py
docs_src/registry/: create_schema.py  default_schema.py  drop_schema.py
docs_src/relationships/: model.py  onetoone.py
docs_src/shared/: extra.md
docs_src/signals/: custom.py  register.py
docs_src/testclient/: tests.py
docs_src/tips/: connection.py  lru.py  migrations.py  models.py  settings.py
docs_src/transactions/: context_manager.py  decorator.py
saffier/: __init__.py  __main__.py  _instance.py  _internal.py  _monkay.py  constants.py  exceptions.py  fields.py  managers.py  metaclass.py  models.py  pydantic.py  queryset.py  testclient.py  types.py  utils.py
saffier/cli/: base.py  cli.py  common_params.py  constants.py  decorators.py  env.py  state.py
saffier/conf/: __init__.py  base.py  enums.py  functional.py  global_settings.py  module_import.py
saffier/contrib/: __init__.py
saffier/core/: _internal.py  base.py  datastructures.py  db.py  events.py  fields.py  formats.py  metaclass.py  registry.py  schemas.py  sync.py  unique.py  utils.py
saffier/db/: _manager.py  connection.py  constants.py  datastructures.py  fields.py  manager.py  queryset.py  related.py  relation.py
saffier/engines/: __init__.py  base.py  msgspec.py  pydantic.py  utils.py
saffier/files/: __init__.py
saffier/marshalls/: __init__.py
saffier/migrations/: __init__.py  base.py  cli.py  constants.py  decorators.py  env.py
saffier/mixins/: models.py
saffier/protocols/: __init__.py  many_relationship.py  queryset.py  transaction_call.py
saffier/scripts/: check  sync-version
saffier/sqlalchemy/: fields.py  protocols.py  types.py
saffier/testing/: __init__.py  client.py  exceptions.py
saffier/utils/: __init__.py  hashing.py  inspect.py  path.py
scripts/: check  clean  coverage  docs  format  install  lint  release  test
tests/: _test_managers.py  conftest.py  settings.py  test_columns.py  test_compat_imports.py  test_constraints.py  test_database_rollback.py  test_database_url.py  test_db_connected_warnings.py  test_declarative_models.py  test_foreignkey.py  test_indexes.py  test_lazy_imports.py  test_managers.py  test_meta.py  test_migrate.py  test_migrate_current_flow.py  test_models.py  test_new_models.py  test_public_exports.py  test_registry.py  test_testclient_aliases.py  test_transactions.py
tests/clauses/: test_and_clauses.py  test_not_clauses.py  test_or_clauses.py  test_q.py  test_q_m2m.py  test_q_nested.py  test_q_or.py
tests/cli/: _test_custom_template.py  main.py  main_extra.py  test_admin_command.py  test_admin_serve_unit.py  test_base_unit.py  test_cli_callback_unit.py  test_custom_template.py  test_custom_template_with_flag.py  test_custom_templates.py  test_decorators.py  test_env_unit.py  test_inspectdb.py  test_saffier_extra.py  test_shell_modules.py  test_state_unit.py  test_templates.py  utils.py
tests/combined/: test_combined_querysets.py
tests/conf/: test_conf_settings.py  test_settings.py  test_settings_runtime.py
tests/core/: test_datastructures.py  test_events.py
tests/exclude_secrets/: test_exclude.py  test_exclude_nested.py  test_exclude_repeated.py  test_secrets.py  test_secrets_fk.py
tests/extensions/: test_extensions.py
tests/factory/: test_factory_basic.py  test_factory_deep_paths.py  test_factory_utilities.py
tests/fields/: test_additional_fields.py  test_composite_fields.py  test_composite_fields_column_name.py  test_composite_fields_fks.py  test_field_alias_modules.py  test_field_api_surface.py  test_foreignkeys.py  test_internal_validators.py  test_isempty_isnull.py  test_multi_column_fields.py  test_virtual_and_postgres_fields.py
tests/files/: test_files_base.py  test_move.py  test_storage.py  test_storage_contract.py
tests/foreign_keys/: test_cross_registry_and_db.py  test_fk_related_name.py  test_foreignkey.py  test_foreignkey_embed_parent.py  test_foreignkey_no_constraint.py  test_foreignkey_related_fields.py  test_foreignkey_special.py  test_many_to_many.py  test_many_to_many_field.py  test_many_to_many_field_new_naming_multiple.py  test_many_to_many_field_related_name.py  test_many_to_many_field_special.py  test_many_to_many_naming.py  test_many_to_many_related_name.py  test_many_to_many_through_pk.py  test_many_to_many_unique.py  test_ref_foreign_key.py  (+2 more)
(+476 files in other folders)
