[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saffier"
description = "Highly scalable, performant, easy to learn, easy to code and for every application."
long_description = "Highly scalable, performant, easy to learn, easy to code and for every application."
readme = "README.md"
requires-python = ">=3.7"
dynamic = ['version']
license = "MIT"
authors = [
    { name = "Tiago Silva", email = "tiago.silva@dymmond.com" },
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=1.10.4,<2.0.0",
    "pydantic-factories==1.12.0",
    "orjson >=3.8.5,<4.0.0",
]
keywords = ["api", "rest", "http", "asgi", "pydantic", "starlette", "fastapi", "framework", "websocket", "openapi", "ml", "machine learning"]

[project.urls]
Homepage = "https://github.com/dymmond/saffier"
Documentation = "https://saffier.dymmond.com/"
Changelog = "https://saffier.dymmond.com/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/dymmond/saffier"

[project.optional-dependencies]
test = [
    "pytest >=7.1.3,<8.0.0",
    "pytest-cov >=2.12.0,<5.0.0",
    "pytest-asyncio >=0.19.0",
    "mypy ==0.982",
    "flake8 >=5.0.4",
    "black == 22.12.0",
    "isort >=5.0.6,<6.0.0",
    "anyio[trio] >=3.2.1,<4.0.0",
    "asyncio[trio] >=3.4.3,<4.0.0",
    "freezegun >=1.2.2,<2.0.0",
    "mock ==4.0.3",
    "pydantic ==1.10.4",
    "pydantic-factories ==1.12.0",
    "orjson >=3.8.5,<4.0.0",
    "types-orjson ==3.6.2",
]

dev = [
    "autoflake >=1.4.0",
    "flake8 >=3.8.3,<6.0.0",
    "uvicorn[standard] >=0.19.0",
    "pre-commit >=2.17.0,<3.0.0",
    "loguru>=0.6.0,<0.7.0",
    "watchfiles>=0.16.1,<0.20.0"
]

doc = [
    "mkautodoc >=0.2.0,<0.3.0",
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material==8.1.4",
    "mdx-include >=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.20.0",
    "pyyaml >=5.3.1,<7.0.0",
]

all = [
    "pydantic>=1.10.4,<2.0.0",
    "orjson >=3.8.5,<4.0.0",
]

[tool.hatch.version]
path = "saffier/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["esmerald", "pydantic", "starlette", "asyncz"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "saffier.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = [
    "/saffier",
]
