[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saffier"
description = "The only python ORM you will ever need."
long_description = "The only python ORM you will ever need."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "alembic>=1.11.3,<2.0.0",
    "anyio>=4.9.0,<5",
    "sayer>=0.7.0,<0.8.0",
    "click>=8.3.1,<9.0.0",
    "dymmond-settings>=1.0.4",
    "loguru>=0.6.0,<0.10.0",
    "databasez>=0.9.2",
    "orjson >=3.8.5,<4.0.0",
    "pydantic>=2.5.3,<3.0.0",
    "rich>=14.0.0,<15.0.0",
    "nest_asyncio",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "pydantic",
    "starlette",
    "fastapi",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
]

[project.urls]
Homepage = "https://github.com/tarsil/saffier"
Documentation = "https://saffier.tarsild.io/"
Changelog = "https://saffier.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/saffier"

[project.scripts]
saffier = "saffier.__main__:run_cli"

[project.optional-dependencies]
test = [
    "asyncpg>=0.27.0,<1",
    "asyncmy>=0.2.7,<0.3.0",
    "ravyn[standard,test]==0.3.9",
    "httpx>=0.25.0,<0.30.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.25.3,<1.0.0",
    "mypy>=1.18.1,<2.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "mock==5.1.0",
    "pymysql>=1.0.2,<2.0.0",
    "types-orjson==3.6.2",
    "ruff>=0.14.2,<1.0.0",
    "ty>=0.0.1",
]

dev = [
    "autoflake >=1.4.0",
    "uvicorn[standard] >=0.19.0",
    "pre-commit>=4.0.0,<5.0.0",
    "watchfiles>=0.16.1,<0.23.0",
    "ty>=0.0.1",
]

doc = [
    "sayer>=0.7.0,<0.8.0",
    "zensical>=0.0.23,<0.1.0",
    "griffe-typingdoc>=0.2.2",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocstrings>=0.28.3,<0.30.0",
    "mkdocstrings-python",
    "pyyaml>=6.0,<7.0.0",
]

testing = ["sqlalchemy_utils>=0.40.0"]
postgres = ["databasez[postgresql]"]
mysql = ["databasez[mysql]"]
sqlite = ["databasez[sqlite]"]

ptpython = ["ptpython>=3.0.23,<4.0.0"]
ipython = ["ipython>=8.10.0,<9.0.0"]

all = [
    "databasez[postgresql,mysql,sqlite]",
    "orjson>=3.8.5,<4.0.0",
    "ptpython>=3.0.23,<4.0.0",
    "ipython>=8.10.0,<9.0.0",
]

[tool.hatch.version]
path = "saffier/__init__.py"

[tool.ruff]
line-length = 99
fix = true

[tool.isort]
profile = "black"
known_third_party = ["ravyn", "pydantic", "starlette", "saffier"]

[tool.mypy]
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
no_implicit_optional = false
show_error_codes = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined,arg-type,override,misc"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ty]

[tool.ty.src]
exclude = ["docs_src/"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I", "UP", "SIM"]
ignore = ["E501", "B008", "C901", "B026", "SIM115", "E731"]

exclude = ["docs_src/*"]

[[tool.mypy.overrides]]
module = "saffier.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "asyncpg",
    "alembic",
    "sqlalchemy_utils.*",
    "nest_asyncio.*",
    "ptpython.*",
]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/saffier"]
