[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saffier"
description = "The only python ORM you will ever need."
long_description = "The only python ORM you will ever need."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "alembic>=1.11.3,<2.0.0",
    "anyio>=4.9.0,<5",
    "sayer>=0.7.0,<0.8.0",
    "click>=8.3.1,<9.0.0",
    "databasez>=0.9.2",
    "monkay>=0.5.0",
    "orjson >=3.8.5,<4.0.0",
    "rich>=14.0.0,<15.0.0",
    "nest_asyncio",
]
keywords = [
    "api",
    "rest",
    "http",
    "asgi",
    "starlette",
    "fastapi",
    "framework",
    "websocket",
    "openapi",
    "ml",
    "machine learning",
]

[project.urls]
Homepage = "https://github.com/tarsil/saffier"
Documentation = "https://saffier.tarsild.io/"
Changelog = "https://saffier.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/saffier"

[project.scripts]
saffier = "saffier.__main__:run_cli"

[project.optional-dependencies]
test = [
    "asyncpg>=0.27.0,<1",
    "asyncmy>=0.2.7,<0.3.0",
    "ravyn==0.3.10",
    "httpx>=0.25.0,<0.30.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.25.3,<2.0.0",
    "freezegun>=1.2.2,<2.0.0",
    "mock==5.1.0",
    "pymysql>=1.0.2,<2.0.0",
    "types-orjson==3.6.2",
    "ruff>=0.14.2,<1.0.0",
    "ty>=0.0.1",
    "pydantic",
    "msgspec"
]

dev = [
    "autoflake >=1.4.0",
    "uvicorn[standard] >=0.19.0",
    "pre-commit>=4.0.0,<5.0.0",
    "ty>=0.0.1",
]

doc = [
    "sayer>=0.7.0,<0.8.0",
    "zensical>=0.0.23,<0.1.0",
    "griffe-typingdoc>=0.2.2",
    "mkdocs-meta-descriptions-plugin>=2.3.0",
    "mdx-include>=1.4.2,<2.0.0",
    "mkdocstrings>=0.30.0,<1.1.0",
    "mkdocstrings-python>=2.0.3",
    "pyyaml>=6.0,<7.0.0",
    "ruff>=0.14.2,<1.0.0",
]

testing = ["sqlalchemy_utils>=0.40.0"]
postgres = ["databasez[postgresql]"]
mysql = ["databasez[mysql]"]
sqlite = ["databasez[sqlite]"]

ptpython = ["ptpython>=3.0.23,<4.0.0"]
ipython = ["ipython>=8.10.0,<9.0.0"]
admin = [
    "starlette>=0.37.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "itsdangerous>=2.1.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

all = [
    "databasez[postgresql,mysql,sqlite]",
    "orjson>=3.8.5,<4.0.0",
    "ptpython>=3.0.23,<4.0.0",
    "ipython>=8.10.0,<9.0.0",
    "starlette>=0.37.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "uvicorn>=0.23.0,<1.0.0",
    "itsdangerous>=2.1.0,<3.0.0",
    "python-multipart>=0.0.9,<1.0.0",
]

[tool.hatch.envs.default]
dependencies = [
    "pre-commit>=4.0.0,<5.0.0",
    "saffier[test,doc,postgres,mysql,sqlite,testing]",
]

[tool.hatch.envs.default.scripts]
clean_pyc = "find . -type f -name \"*.pyc\" -delete"
clean_pycache = "find . -type d -name \"*__pycache__*\" -delete"
lint = "scripts/lint"
check = "scripts/check"

[tool.hatch.envs.docs]
features = ["doc"]

[tool.hatch.envs.docs.scripts]
prepare = "scripts/docs.py prepare"
clean = "scripts/docs.py clean"
build = "scripts/docs.py build --clean {args}"
serve = "scripts/docs.py serve {args}"
dev = "scripts/docs.py serve {args}"

[tool.hatch.envs.test]
features = ["test", "postgres", "mysql", "sqlite", "testing"]

[tool.hatch.envs.test.env-vars]
SAFFIER_TESTCLIENT_USE_EXISTING = "true"
SAFFIER_TESTCLIENT_TEST_PREFIX = ""

[tool.hatch.envs.test.scripts]
test = "pytest {args}"
test_man = "pytest {args} -s -vv"
check_types = "ty check saffier/conf/__init__.py saffier/conf/base.py saffier/conf/global_settings.py {args}"

[tool.hatch.version]
path = "saffier/__init__.py"

[tool.ruff]
line-length = 99
fix = true

[tool.isort]
profile = "black"
known_third_party = ["ravyn", "starlette", "saffier"]

[tool.ty]

[tool.ty.src]
exclude = ["docs_src/"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B", "I", "UP", "SIM"]
ignore = ["E501", "B008", "C901", "B026", "SIM115", "E731"]

exclude = ["docs_src/*"]

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/saffier"]
